[package]
name = "rf0"
version = "0.1.0"
authors = ["Aaron Sikes <aaron@sikes.io>"]
edition = "2018"

[dependencies]
rkv = "0.10.2"
num = "0.2.0"
rand = "0.7"
sha3 = "0.8.2"
hex-literal = "0.2.1"
hex = "0.4.0"
nom = "5.0.1"
failure = "0.1.6"
indoc = "0.3"
lazy_static = "1.4"
unicode-segmentation = "1.3.0"
rhai = "0.9"
