[package]
name = "bridged-group"
version = "0.1.0"
authors = ["Aaron Sikes <aaron@sikes.io>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.16", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1.0.2"
